<resources>
    <string name="app_name">Mi Primer Proyecto</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Mi Primer Proyecto</string>
    <string name="fragment_title_1">Inicio</string>
    <string name="fragment_title_2">Lista de Usuarios</string>
    <string name="fragment_title_3">Detalle del Usuario</string>
    <string name="fragment_title_4">Nuevo Usuario</string>
    <string name="detail_name">Nombre</string>
    <string name="detail_age">Edad</string>
    <string name="detail_hometown">Ciudad</string>
    <string name="detail_gender">Género</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="gender">Género: </string>
    <string name="gender_select">Seleccione un Género: </string>
    <string name="text_name">Digite su Nombre: </string>
    <string name="text_age">Digite su Edad: </string>
    <string name="text_hometown">Digite su Ciudad: </string>
    <string name="hint_name">Pedro</string>
    <string name="hint_age">30</string>
    <string name="hint_hometown">San José</string>
    <string name="fill_button">Agregar</string>
    <string-array name="values_fragment2">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>

</resources>
