<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.agvenegas.prueba4.NewUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingLeft="8dp">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/hint_name"/>

        <TextView
            android:id="@+id/text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_age"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="100"
            android:hint="@string/hint_age"/>

        <TextView
            android:id="@+id/text_hometown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hometown"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_hometown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hometown"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            android:id="@+id/spinner_gender"
            android:dropDownSelector="@drawable/color_selector"
            android:background="@android:color/white"
            android:theme="@style/Spinnerspinner_gender"
            android:prompt="@string/gender_select"/>

        <Button
            android:id="@+id/fill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_button"/>


    </LinearLayout>

</LinearLayout>
