<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.agvenegas.prueba4.Fragment4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingLeft="8dp">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/hint_name"/>

        <TextView
            android:id="@+id/text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_age" />

        <EditText
            android:id="@+id/edit_text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="100"
            android:hint="@string/hint_age"/>

        <TextView
            android:id="@+id/text_hometown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hometown" />

        <EditText
            android:id="@+id/edit_text_hometown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hometown"/>

        <Button
            android:id="@+id/fill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_button"/>


    </LinearLayout>

</LinearLayout>
