<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.agvenegas.prueba4.DetailUserFragment">

    <ImageView
        android:id="@+id/icon_detail_layout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_name" />

    <TextView
        android:id="@+id/detail_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_age" />

    <TextView
        android:id="@+id/detail_hometown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_hometown" />

    </LinearLayout>

</LinearLayout>
