<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/iconID"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/detail_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:height="30sp" />

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="bottom"
            android:id="@+id/tvAge"
            android:text="@string/detail_age"
            android:layout_marginLeft="10dp"
            android:height="20sp" />

        <TextView android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_hometown"
            android:layout_marginLeft="10dp"
            android:gravity="bottom"
            android:height="20sp" />

        <TextView android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_gender"
            android:layout_marginLeft="10dp"
            android:gravity="bottom"
            android:height="20sp" />

    </LinearLayout>

</LinearLayout>